# MobileAgent

./: pyproject.toml  requirements.txt
MobileAgent/: icon_localization.py
