[tool.poetry]
name = "mobileagent"
version = "0.1.1"
description = ""
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
readme = "README.md"
packages = [
    { include = "MobileAgent" },
    { include = "groundingdino" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.2.1"
torchvision = "^0.17.1"
clip = {git = "https://github.com/openai/CLIP.git"}
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
pycocotools = "^2.0.7"
timm = "^0.9.16"
sentencepiece = "^0.2.0"
tf-slim = "^1.1.0"
tf-keras = "^2.15.0"
pyclipper = "^1.3.0.post5"
shapely = "^2.0.3"
transformers = "^4.38.1"
# modelscope = "^1.12.0"
# tensorflow = "^2.15.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
